--- a/src/styles/components/error404.scss
+++ b/src/styles/components/error404.scss
@@ -6,7 +6,7 @@
   width: 100%;
   gap: 80px;
   margin-top: 60px;
-  margin-bottom: 150px;
+  margin-bottom: 160px;
 
   @media (max-width: 768px) {
     margin-top: 120px;
